Corrected the checkbox position and is aligned right besides terms and conditions

--- a/application/client/src/css/registration.css
+++ b/application/client/src/css/registration.css
@@ -102,3 +102,18 @@ h1{
   .col-12{
     padding: 10px;
   }
+
+  .check-box{
+    padding: 5%;
+    margin-left: 0%;
+  }
+
+  input.signup-check{
+    display: inline;
+    padding: 2%;
+    width: 28px;
+    flex: 0 0 200px;
+    margin-left: 12px;
+    height: 50px;
+    vertical-align: middle;   
+}
